[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pg-force-execute"
version = "0.0.7"
authors = [
  { name="Department for International Trade", email="sre@digital.trade.gov.uk" },
]
description = "Context manager to run PostgreSQL queries with SQLAlchemy, terminating any other clients that block them"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sqlalchemy>=1.4.40",
]

[project.optional-dependencies]
dev = [
    "psycopg[binary]>=3.1.9",
    "pytest>=7.2.1",
]

[project.urls]
"Source" = "https://github.com/uktrade/pg-force-execute"

[tool.hatch.build]
include = [
  "pg_force_execute.py"
]
